@@ -5,6 +5,8 @@ Changes for Crate
 Unreleased
 ==========
 
+ - Added support for BETWEEN
+
  - Fix: The ``minimum_should_match`` fulltext search option was ignored
    which lead to incorrect results for queries with multiple terms when
    ``minimum_should_match`` was explicitly set to a non-default value.
